Implemented DELETE /locales/{id} e2e flow