@@ -241,6 +241,7 @@
                             <version>${maven.surefire.plugin.version}</version>
                             <configuration>
                                 <groups>unit, e2e, endpoint, mapper</groups>
+                                <argLine>--illegal-access=permit</argLine>
                             </configuration>
                         </plugin>
                     </plugins>
